objects/EXPRN__Alert__c.object
<CustomObject>
    <description>Notification to an AMS Customer that a Registered Account has received a trigger event that passed the filter criteria</description>
    <fields>
        <fullName>EXPRN__Account_Address__c</fullName>
        <formula>IF( NOT(ISBLANK(EXPRN__Account__r.BillingStreet)), EXPRN__Account__r.BillingStreet + BR() , &apos;&apos;) 
+ 
IF( NOT(ISBLANK(EXPRN__Account__r.BillingCity)), EXPRN__Account__r.BillingCity + &apos;, &apos; , &apos;&apos;) 
+ 
IF( NOT(ISBLANK(EXPRN__Account__r.BillingState)), EXPRN__Account__r.BillingState + &apos; &apos; , &apos;&apos;) 
+ 
IF( NOT(ISBLANK(EXPRN__Account__r.BillingPostalCode)), EXPRN__Account__r.BillingPostalCode + BR() , &apos;&apos;) 
+ 
IF( NOT(ISBLANK(EXPRN__Account__r.Phone)), 
EXPRN__Account__r.Phone , &apos;&apos;)</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Owner__c</fullName>
        <formula>EXPRN__Account__r.Owner.FirstName &amp; &quot; &quot; &amp; EXPRN__Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Experian Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__Alert_Date__c</fullName>
        <label>Alert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Alert_ID__c</fullName>
        <externalId>true</externalId>
        <label>Alert ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EXPRN__Alert_Monitored_Set_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Alert Monitored Set</label>
        <referenceTo>EXPRN__Alert_Monitored_Set_Name__c</referenceTo>
        <relationshipLabel>Experian Alerts</relationshipLabel>
        <relationshipName>Experian_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIN__c</fullName>
        <label>Experian BIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Business_Name_Text__c</fullName>
        <label>Experian Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Address__c</fullName>
        <formula>IF( NOT(ISBLANK(EXPRN__Account__r.EXPRN__Exp_Business__r.EXPRN__Exp_Street_Address1__c)), EXPRN__Account__r.EXPRN__Exp_Business__r.EXPRN__Exp_Street_Address1__c + BR() , &apos;&apos;) 
+ 
IF( NOT(ISBLANK(EXPRN__Account__r.EXPRN__Exp_Business__r.EXPRN__Exp_City_Name__c)), EXPRN__Account__r.EXPRN__Exp_Business__r.EXPRN__Exp_City_Name__c + &apos;, &apos; , &apos;&apos;) 
+ 
IF( NOT(ISBLANK(EXPRN__Account__r.EXPRN__Exp_Business__r.EXPRN__Exp_STATE__c)), EXPRN__Account__r.EXPRN__Exp_Business__r.EXPRN__Exp_STATE__c + &apos; &apos; , &apos;&apos;) 
+ 
IF( NOT(ISBLANK(EXPRN__Account__r.EXPRN__Exp_Business__r.EXPRN__Exp_ZIP__c)), EXPRN__Account__r.EXPRN__Exp_Business__r.EXPRN__Exp_ZIP__c + BR() , &apos;&apos;) 
+ 
IF( NOT(ISBLANK(EXPRN__Account__r.EXPRN__Exp_Business__r.EXPRN__Exp_Business_Phone_No__c)), 
EXPRN__Account__r.EXPRN__Exp_Business__r.EXPRN__Exp_Business_Phone_No__c , &apos;&apos;)</formula>
        <label>Experian Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Expiry_Date__c</fullName>
        <formula>EXPRN__Alert_Date__c + VALUE(TEXT(EXPRN__Alert_Monitored_Set_Name__r.EXPRN__Retention_Period__c))</formula>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__List_Type__c</fullName>
        <label>List Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Master_Subcode__c</fullName>
        <label>Master Subcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Portfolio_Subcode__c</fullName>
        <label>Portfolio Subcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Unread</fullName>
                    <default>true</default>
                    <label>Unread</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Supplier_Number__c</fullName>
        <label>Supplier Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Trigger_Description__c</fullName>
        <label>Trigger Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Trigger_Id__c</fullName>
        <label>Trigger Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Trigger_Type1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trigger Code</label>
        <referenceTo>EXPRN__Trigger_Type__c</referenceTo>
        <relationshipLabel>Experian Alerts</relationshipLabel>
        <relationshipName>Alerts1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Trigger_Type_Formula__c</fullName>
        <formula>EXPRN__Trigger_Type1__r.EXPRN__Trigger_Code__c</formula>
        <label>Trigger Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Trigger_Type__c</fullName>
        <label>Trigger Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Experian Alert</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>